deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adama-app
  labels:
    app: adama-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adama-app
  template:
    metadata:
      labels:
        app: adama-app
    spec:
      containers:
      - name: adama-app-container
        image: 600941914653.dkr.ecr.ap-south-1.amazonaws.com/adama_internal:latest
        ports:
        - containerPort: 80
