service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adama-app-service
  labels:
    app: adama-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external" # Use ALB for external traffic
spec:
  selector:
    app: adama-app
  ports:
    - protocol: TCP
      port: 80       # The port exposed by the Service
      targetPort: 80 # The port your application listens on inside the container
  type: ClusterIP
