ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adama-app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb" # Use AWS ALB
    alb.ingress.kubernetes.io/scheme: "internet-facing" # ALB is publicly accessible
    alb.ingress.kubernetes.io/target-type: "ip" # Target pods directly
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # ALB listens on port 80
    alb.ingress.kubernetes.io/healthcheck-path: "/" # Health check endpoint
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port" # Health check on the service port
    alb.ingress.kubernetes.io/success-codes: "200-399" # Expected success response codes
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adama-app-service # Updated service name to match deployment
                port:
                  number: 80
